WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255457
Some dynamically sized Interaction Regions occlusions are missing
https://bugs.webkit.org/show_bug.cgi?id=255457
Summary
Some dynamically sized Interaction Regions occlusions are missing
Etienne
Reported
2023-04-14 08:52:08 PDT
Some dynamically sized Interaction Regions occlusions are missed
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-04-14 09:04:02 PDT
<
rdar://problem/107960700
>
Etienne
Comment 2
2023-04-14 09:05:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12746
EWS
Comment 3
2023-04-14 14:52:01 PDT
Committed
262992@main
(b6fce29cdde4): <
https://commits.webkit.org/262992@main
> Reviewed commits have been landed. Closing PR #12746 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug