Some dynamically sized Interaction Regions occlusions are missing https://bugs.webkit.org/show_bug.cgi?id=255457 <rdar://107960700>

Reviewed by Tim Horton.

Remove the size limit on occlusion regions (but not interaction
regions).

* LayoutTests/interaction-region/full-page-overlay-expected.txt:
* LayoutTests/interaction-region/full-page-overlay.html:
Update the test to cover this scenario.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):
Remove the "padding" added to the frame view's area, since it was
originally introduced for occlusions.
Remove the area check in the occlusion branch.

Canonical link: https://commits.webkit.org/262992@main